fixes de reviews

--- a/Ejemplo.ipynb
+++ b/Ejemplo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81db9134",
+   "id": "3d8721f1",
    "metadata": {},
    "source": [
     "Esto es algún texto de ejemplo\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "58369c56",
+   "id": "7e785387",
    "metadata": {},
    "outputs": [
     {
@@ -51,18 +51,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b45a4de",
+   "id": "c5645d72",
    "metadata": {},
    "source": [
-    "Más explicacion sobre temas de circuitos cuánticos ...\n",
+    "Más explicación sobre temas de circuitos cuánticos ...\n",
     "\n",
-    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras convallis, orci nec dapibus egestas, nunc neque pharetra mauris, quis efficitur justo tortor nec urna. Suspendisse sollicitudin felis magna. Vestibulum consequat lacinia iaculis. Nunc ac nunc sagittis, faucibus sapien non, venenatis nisi. Nulla vel mi mauris. Aenean sit amet eros id leo dictum fringilla vel ut tortor. Suspendisse a commodo metus. Ut nisl neque, lobortis at erat ac, tempor porta ex"
+    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras convallis, orci nec dapibus egestas, nunc neque pharetra mauris, quis efficitur justo tortor nec urna. Suspendisse sollicitudin felis magna. Vestibulum consequat lacinia iaculis. Nunc ac nunc sagittis, faucibus sapien non, venenatis nisi. Nulla vel mi mauris. Aenean sit amet eros id leo dictum fringilla vel ut tortor. Suspendisse a commodo metus. Ut nisl neque, lobortis at erat ac, tempor porta ex."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "181bf615",
+   "id": "64dc41d5",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
     "from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit, execute, Aer\n",
     "from random import randrange\n",
     "\n",
-    "circuit = QuantumCircuit(2, 2)\n",
+    "circuit = QuantumCircuit(2, 2) #$ se crea el circuito\n",
     "\n",
     "circuit.h(0)\n",
     "\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f7486a1",
+   "id": "475b6dae",
    "metadata": {},
    "outputs": [],
    "source": []
